ligolang/src/test/contracts/negative/duplicate_record_field.mligo
type r = { foo : int ; foo : int }

let main (p, s : r * unit) : operation list * unit =
  (([] : operation list), ())
